--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,20 @@
 // SCSS
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: rgb(57, 57, 57);
+}
+
 .container {
   background-color: rgb(207, 207, 207);
   padding: 2rem;
@@ -35,20 +49,6 @@
   }
 }
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: rgb(57, 57, 57);
-}
-
 p {
   text-transform: uppercase;
   color: white;
@@ -71,6 +71,8 @@ p {
   border-radius: 9999px;
   transform: translateY(-125px);
   font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
   border: none;
   padding: 1rem;
@@ -85,4 +87,18 @@ p {
 
 .cursor-none {
   pointer-events: none;
+}
+
+.loose-container {
+  position: fixed;
+  top: 0;
+  background-color: white;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 1rem;
+  .loose {
+    font-size: 2rem;
+    font-weight: bold;
+    color: red;
+  }
 }
